# caltechauthors

./: .gitignore  .invenio  DEV_SETUP.md  MIGRATION.md  Migration_Steps_using_Dev_Containers.md  Pipfile  README.md  Setting_up_RDM_using_Dev_Containers.md  Stats-dump-and-restore.md  building_indexes.md  certbot2saml.bash  copy_rdm_production_db_records.bash  debugging_rdm.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  dump-opensearch-indexes.bash  fetch_todays_backup.bash  gunicorn.conf.py  invenio-sql-backup.bash  invenio-sql-command.bash  invenio-sql-restore.bash  invenio.cfg  nginx-sites-enabled-default  nginx.conf  package-lock.json  package.json  pyproject.toml  rdm.service  rdm_celery.service  rdm_rest.service  redirect-map.conf  restore-opensearch-indexes.bash  uwsgi_rest.ini  uwsgi_ui.ini  vocabularies-future.yaml
.devcontainer/: Dockerfile  devcontainer.json
app_data/: pages.yaml  users.yaml  vocabularies.yaml
app_data/pages/help/: statistics.html
app_data/vocabularies/: caltech_groups.jsonl  caltech_groups.yaml  caltech_journals.jsonl  description_types.yaml  licenses.csv  publication_status.jsonl  relation_types.yaml  resource_types.yaml  roles.yaml  users.yaml
docker/nginx/: test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
scripts/: add_file.py  change_password.py  change_version_index.py  clear_embargo.py  clear_uploads.py  confirm_user.py  deactivate_user.py  delete_datacite_pid.py  delete_file.py  delete_pid.py  enable_files.py  fix_version.py  get_pid.py  get_routes.py  link-instance-assets.sh  migrate_11_0_to_12_0.py  migrate_11_0_to_12_0.sql  reindex_more_stuff.py  set_latest.py  setup_test_instance.py  tom_sketch_migrate_11_0_to_13_0.sql  upload_logo.py
site/: .gitkeep  pyproject.toml  setup.cfg
site/caltechauthors/: records.py  views.py  webpack.py
static/: robots.txt
templates/security/email/: confirmation_instructions.html  confirmation_instructions.txt  (+4 more)
(+25 files in other folders)
