[project]
name = "caltechauthors-instance"
version = "13.1.2"
description = "CaltechAUTHORS Invenio RDM v13 instance"
requires-python = ">=3.12"

dependencies = [
  "caltechauthors",
  "invenio-app-rdm[opensearch2,s3]",
  "idutils",
  "invenio-s3",
  "invenio-vocabularies",
  "invenio-logging[sentry]",
  "python-dotenv>=0.21.0",
  "setuptools<82",
]

[dependency-groups]
# uWSGI does not build on macOS ARM; install this group on Linux production only:
#   uv sync --group production
production = [
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
]
# gunicorn for local dev on macOS (or any platform without uWSGI):
#   uv sync --group dev
dev = [
  "gunicorn>=22.0",
]

[tool.uv]
# lxml must be built from source on macOS ARM; requires MacPorts libxml2/libxslt:
#   sudo port install libxml2 libxslt
no-binary-package = ["lxml"]

[tool.uv.sources]
caltechauthors       = { path = "./site", editable = true }
invenio-app-rdm      = { git = "https://github.com/caltechlibrary/invenio-app-rdm.git", tag = "v13.1.2.caltechauthors.2" }
idutils              = { git = "https://github.com/caltechlibrary/idutils.git", branch = "authors" }
invenio-s3           = { git = "https://github.com/caltechlibrary/invenio-s3.git", branch = "maint-v3.x" }
invenio-vocabularies = { git = "https://github.com/caltechlibrary/invenio-vocabularies.git", branch = "maint-9.0.x" }
